# Simple_MathExpression_Evaluator

./: CMakeLists.txt
include/: SimpleMathExpression.hpp
sources/: SimpleMathExpression.cpp  main.cpp
